# Practices

./: CMakeLists.txt
include/: CMakeLists.txt
src/: CMakeLists.txt  ChickenAndRabbit.cpp  CountWord.cpp  FindSubStr.cpp  HalfPrice.cpp  Keybord.cpp  Matrix.cpp  NoPush.cpp  PalindromeString.cpp  PalindromeStringWithSpace.cpp  Pythagorean.cpp  SimilarString.cpp  SortString.cpp  SuperPalindromeString.cpp  Time.cpp  XY.cpp  add.cpp  second.cpp
